<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutM"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UltrasoundActivity">

    <ImageView
        android:id="@+id/imageView_mammo"
        android:layout_width="384dp"
        android:layout_height="387dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_upload_mammo"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:minWidth="373dp"
        android:text="Upload mammography"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_mammo" />

    <Button
        android:id="@+id/button_make_prediction_mammo"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:minWidth="373dp"
        android:text="Make prediction"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_upload_mammo" />

    <TextView
        android:id="@+id/result_mammo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_make_prediction_mammo" />

    <Button
        android:id="@+id/button_get_mask_mammo"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:minWidth="373dp"
        android:text="View segmentation mask"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_mammo" />

    <Button
        android:id="@+id/button_get_bbox_mammo"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:minWidth="373dp"
        android:text="View bounding box"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_get_mask_mammo" />

    <Button
        android:id="@+id/button_reset_mammo"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:minWidth="373dp"
        android:text="Upload new mammography"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_get_bbox_mammo" />

    <ProgressBar
        android:id="@+id/progressBar_ultrasound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
